Fix: Refactor Map.of for Java 8 compatibility in OpenAIService
The OpenAIService previously used Map.of to create a map for the
OpenAI API request. Map.of was introduced in Java 9 and is not
available in Java 8, which is the JDK version used by your project.

This commit refactors the Map.of("type", "json_object") call
in the `generateTestCases` method of `OpenAIService.java` to use
`new HashMap<>()`, `put()`, and `Collections.unmodifiableMap()`.
This ensures compatibility with Java 8 environments.

Imports for `java.util.HashMap` and `java.util.Collections`
were also added.